--- a/package.json
+++ b/package.json
@@ -59,16 +59,18 @@
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.51.0",
     "copyfiles": "^2.4.1",
-    "eslint": "^8.19.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-import": "2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "import-sort-style-module": "^6.0.0",
     "nodemon": "^2.0.6",
-    "prettier": "^2.7.1",
+    "prettier": "^3.2.4",
     "slate": "0.91.4",
     "ts-node": "10.9.1",
     "typescript": "^4.8.4"
@@ -76,5 +78,11 @@
   "resolutions": {
     "jackspeak": "2.1.1"
   },
-  "format": "prettier --write \"**/*.{ts,tsx,md,mdx,css,scss}\""
+  "format": "prettier --write \"**/*.{ts,tsx,md,mdx,css,scss}\"",
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
+  }
 }
